<!--ScrollView to allow user to scroll page-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Orange Flag Warning Image-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="184dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/orange_flag"
                    app:srcCompat="@drawable/secondary_symptoms" />

                <!--ScrollView to scroll through all options-->
                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!--Title and introduction text-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/symptoms_title"
                            android:textAppearance="?attr/textAppearanceHeadline6" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/symptoms_intro"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="16sp" />


                        <!--Checkboxes to check if certain symptoms are present-->
                        <CheckBox
                            android:id="@+id/symptom1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom1" />

                        <CheckBox
                            android:id="@+id/symptom2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom2" />

                        <CheckBox
                            android:id="@+id/symptom3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom3" />

                        <CheckBox
                            android:id="@+id/symptom4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom4" />


                        <CheckBox
                            android:id="@+id/symptom5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom5" />

                        <CheckBox
                            android:id="@+id/symptom6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom6" />

                        <CheckBox
                            android:id="@+id/symptom7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom7" />

                        <CheckBox
                            android:id="@+id/symptom8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom8" />

                        <CheckBox
                            android:id="@+id/symptom9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom9" />

                        <CheckBox
                            android:id="@+id/symptom10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom10" />

                        <CheckBox
                            android:id="@+id/symptom11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom11" />

                        <CheckBox
                            android:id="@+id/symptom12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom12" />

                        <CheckBox
                            android:id="@+id/symptom13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/symptom13" />

                        <CheckBox
                            android:id="@+id/symptom14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom14" />

                        <CheckBox
                            android:id="@+id/symptom15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom15" />

                        <CheckBox
                            android:id="@+id/symptom16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom16" />

                        <CheckBox
                            android:id="@+id/symptom17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom17" />

                        <CheckBox
                            android:id="@+id/symptom18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom18" />

                        <CheckBox
                            android:id="@+id/symptom19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom19" />

                        <CheckBox
                            android:id="@+id/symptom20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/symptom20" />


                    </LinearLayout>

                </ScrollView>


                <!--App designed Buttons to continue/call ambulance -->
                <!--Layout_weight=1 gives each button equal size within the view-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/symptom_call_ambulance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:onClick="onButtonClicked"
                        android:text="@string/call_ambulance"
                        android:textSize="12sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/symptom_continue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onButtonClicked"
                        android:text="@string/continue_diagnosis"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>

